@@ -123,6 +123,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - FIX: Only the last dependency descriptor is taken into account on the same module (IVY-1240)
 - FIX: UseCacheOnly doesn't respect the cache configuration in the ivysettings (IVY-1227)
 - FIX: UseCacheOnly is influenced by the TTL on cached metadata (IVY-1243)
+- FIX: ConcurrentModificationException on ivy settings loading (IVY-1250)
 
    2.2.0
 =====================================
